# LYF-smart-cycling-computer

./: .gitignore  README.md
Program/mabiao/: .clangd  CMakeLists.txt  sdkconfig.defaults
Program/mabiao/DOC/: HLK-AS201.py  论文.md  速度传感器对话.md
Program/mabiao/components/app/: CMakeLists.txt  app.cpp
Program/mabiao/components/app/include/: app.h  config.h
Program/mabiao/components/app/pages/: AppFactory.cpp  AppFactory.h
Program/mabiao/components/app/pages/bledevices/: BleDevices.cpp  BleDevices.h  BleDevicesModel.cpp  BleDevicesModel.h
Program/mabiao/components/app/pages/compass/: Compass.cpp  Compass.h  CompassModel.cpp  CompassModel.h  CompassView.cpp  CompassView.h
Program/mabiao/components/app/pages/dialplate/: Dialplate.cpp  Dialplate.h  DialplateModel.cpp  DialplateModel.h  DialplateView.cpp  DialplateView.h
Program/mabiao/components/app/pages/heartrate/: HeartRate.cpp  HeartRate.h  HeartRateModel.cpp  HeartRateModel.h
Program/mabiao/components/app/pages/liveMap/: LiveMap.cpp  LiveMap.h  LiveMapModel.cpp  LiveMapModel.h  LiveMapView.cpp  LiveMapView.h
Program/mabiao/components/app/pages/rgbcontrol/: RGBControl.cpp  RGBControl.h  RGBControlModel.cpp  RGBControlModel.h  RGBControlView.cpp  RGBControlView.h
Program/mabiao/components/app/pages/speedsensor/: SpeedSensor.cpp  SpeedSensor.h  SpeedSensorModel.cpp  SpeedSensorModel.h
Program/mabiao/components/app/pages/systeminfos/: SystemInfos.cpp  SystemInfos.h  SystemInfosModel.cpp  SystemInfosModel.h  SystemInfosView.cpp  SystemInfosView.h
Program/mabiao/components/app/pages/wavetable/: WaveTable.cpp  WaveTable.h  WaveTableModel.cpp  WaveTableModel.h  WaveTableView.cpp  WaveTableView.h
Program/mabiao/components/app/utils/MapConv/: MapConv.cpp
Program/mabiao/components/app/utils/TrackFilter/: TrackPointFilter.cpp
Program/mabiao/components/app/utils/lv_anim_label/: lv_anim_label.cpp  lv_anim_label.h
Program/mabiao/components/app/utils/pagemgr/: PM_Base.cpp  PM_Log.h  PM_Router.cpp  PM_State.cpp  PageBase.cpp  PageFactory.h
Program/mabiao/components/app/utils/resource/: ResourceManager.cpp  ResourcePool.cpp  ResourcePool.h
Program/mabiao/components/app/utils/resource/Font/: font_smileysd_16.c
Program/mabiao/components/app/utils/statusbar/: StatusBar.cpp  StatusBar.h
Program/mabiao/components/app/utils/systemmonitor/: SystemMonitor.cpp  SystemMonitor.h
Program/mabiao/components/bsp_ble/: CMakeLists.txt  bsp_ble.c  bsp_ble_ui.c  esp_central.h  peer.c
Program/mabiao/components/bsp_ble/include/: bsp_ble.h
Program/mabiao/components/bsp_buzzer/: CMakeLists.txt  bsp_buzzer.c
Program/mabiao/components/bsp_buzzer/include/: bsp_buzzer.h
Program/mabiao/components/bsp_gps/: CMakeLists.txt  bsp_gps.c
Program/mabiao/components/bsp_gps/include/: bsp_gps.h
Program/mabiao/components/bsp_imu/: CMakeLists.txt  bsp_imu.c
Program/mabiao/components/bsp_imu/include/: bsp_imu.h
Program/mabiao/components/bsp_ip5306/: CMakeLists.txt  bsp_ip5306.c
Program/mabiao/components/bsp_ip5306/include/: bsp_ip5306.h
Program/mabiao/components/bsp_lcd/: CMakeLists.txt  bsp_lcd.cpp
Program/mabiao/components/bsp_lcd/include/: bsp_lcd.h  lgfx_mabiao.hpp  lgfx_sss.hpp
Program/mabiao/components/bsp_power/: CMakeLists.txt  bsp_power.c
Program/mabiao/components/bsp_power/include/: bsp_power.h
Program/mabiao/components/bsp_rgb_led/: CMakeLists.txt  bsp_rgb_led.c
Program/mabiao/components/bsp_rgb_led/include/: bsp_rgb_led.h
Program/mabiao/components/bsp_sd/: CMakeLists.txt  bsp_sd.c
Program/mabiao/components/bsp_sd/include/: bsp_sd.h
Program/mabiao/components/bsp_touch/: CMakeLists.txt  bsp_touch.c
Program/mabiao/components/bsp_touch/include/: bsp_touch.h
Program/mabiao/components/dataproc/: CMakeLists.txt  dataproc.cpp  dp_ble.cpp  dp_gps.cpp  dp_imu.cpp  dp_power.cpp  dp_rgb.cpp  dp_sport.cpp  dp_statusbar.cpp  dp_storage.cpp  dp_sysconfig.cpp  dp_trackfilter.cpp
Program/mabiao/components/dataproc/include/: Account.h  dataproc.h  dataproc_def.h
Program/mabiao/components/dataproc/utils/datacenter/: Account.cpp  DataCenter.h  DataCenterLog.h
Program/mabiao/components/hal_layer/: CMakeLists.txt  hal.cpp  hal_ble.cpp  hal_gps.cpp  hal_imu.cpp  hal_lcd.cpp  hal_power.cpp  hal_rgb.cpp  hal_touch.cpp
Program/mabiao/components/hal_layer/include/: hal.h  hal_def.h  hal_rgb.h
Program/mabiao/main/: CMakeLists.txt  idf_component.yml  lv_port_fs.c  lv_port_fs.h  lvgl_port.cpp  lvgl_port.h  main.c
Program/mabiao/tools/: _patch_conn_params.ps1  _patch_mtu_wwr.ps1
