idf_component_register(
    SRCS "app.cpp" 
         "utils/pagemgr/PageBase.cpp"
         "utils/pagemgr/PM_Base.cpp"
         "utils/pagemgr/PM_Anim.cpp"
         "utils/pagemgr/PM_Router.cpp"
         "utils/pagemgr/PM_State.cpp"
         "utils/pagemgr/PM_Drag.cpp"
         "utils/statusbar/StatusBar.cpp"
         "utils/lv_anim_label/lv_anim_label.cpp"
         "utils/systemmonitor/SystemMonitor.cpp"
         "utils/resource/ResourceManager.cpp"
         "utils/resource/ResourcePool.cpp"
         "utils/resource/Font/font_bahnschrift_13.c"
         "utils/resource/Font/font_bahnschrift_17.c"
         "utils/resource/Font/font_bahnschrift_32.c"
         "utils/resource/Font/font_bahnschrift_65.c"
         "utils/resource/Font/font_agencyb_36.c"
         "utils/resource/Font/font_smiley_36.c"
         "utils/resource/Font/font_compass_24.c"
         "utils/resource/Font/font_smileysd_16.c"
         "utils/resource/Image/img_src_alarm.c"
         "utils/resource/Image/img_src_battery.c"
         "utils/resource/Image/img_src_battery_info.c"
         "utils/resource/Image/img_src_bicycle.c"
         "utils/resource/Image/img_src_compass.c"
         "utils/resource/Image/img_src_compass_bg.c"
         "utils/resource/Image/img_src_gps_arrow_default.c"
         "utils/resource/Image/img_src_gps_arrow_dark.c"
         "utils/resource/Image/img_src_gps_arrow_light.c"
         "utils/resource/Image/img_src_gps_pin.c"
         "utils/resource/Image/img_src_gyroscope.c"
         "utils/resource/Image/img_src_locate.c"
         "utils/resource/Image/img_src_map_location.c"
         "utils/resource/Image/img_src_menu.c"
         "utils/resource/Image/img_src_origin_point.c"
         "utils/resource/Image/img_src_pause.c"
         "utils/resource/Image/img_src_popcat_close.c"
         "utils/resource/Image/img_src_popcat_open.c"
         "utils/resource/Image/img_src_satellite.c"
         "utils/resource/Image/img_src_sd_card.c"
         "utils/resource/Image/img_src_start.c"
         "utils/resource/Image/img_src_stop.c"
         "utils/resource/Image/img_src_storage.c"
         "utils/resource/Image/img_src_system_info.c"
         "utils/resource/Image/img_src_time_info.c"
         "utils/resource/Image/img_src_trip.c"
         "pages/wavetable/WaveTable.cpp"
         "pages/wavetable/WaveTableView.cpp"
         "pages/wavetable/WaveTableModel.cpp"
         "pages/systeminfos/SystemInfos.cpp"
         "pages/systeminfos/SystemInfosModel.cpp"
         "pages/systeminfos/SystemInfosView.cpp"
         "pages/dialplate/Dialplate.cpp"
         "pages/dialplate/DialplateModel.cpp"
         "pages/dialplate/DialplateView.cpp"
         "pages/liveMap/LiveMap.cpp"
         "pages/liveMap/LiveMapModel.cpp"
         "pages/liveMap/LiveMapView.cpp"
         "pages/bledevices/BleDevices.cpp"
         "pages/bledevices/BleDevicesModel.cpp"
         "pages/speedsensor/SpeedSensor.cpp"
         "pages/speedsensor/SpeedSensorModel.cpp"
         "pages/heartrate/HeartRate.cpp"
         "pages/heartrate/HeartRateModel.cpp"
         "pages/compass/Compass.cpp"
         "pages/compass/CompassModel.cpp"
         "pages/compass/CompassView.cpp"
         "pages/rgbcontrol/RGBControl.cpp"
         "pages/rgbcontrol/RGBControlModel.cpp"
         "pages/rgbcontrol/RGBControlView.cpp"
         "pages/AppFactory.cpp"
         "utils/MapConv/MapConv.cpp"
         "utils/MapConv/TileSystem/TileSystem.cpp"
         "utils/MapConv/GPS_Transform/GPS_Transform.c"
         "utils/TileConv/TileConv.cpp"
         "utils/lv_poly_line/lv_poly_line.cpp"
         "utils/TrackFilter/TrackPointFilter.cpp"
         "utils/TrackFilter/TrackLineFilter.cpp"
         "utils/PointContainer/PointContainer.cpp"
    INCLUDE_DIRS "include" 
                 "utils/pagemgr"
                 "utils/statusbar"
                 "utils/lv_anim_label"
                 "utils/systemmonitor"
                 "utils/resource"
                 "utils/resource/Font"
                 "utils/resource/Image"
                 "pages/wavetable"
                 "pages/systeminfos"
                 "pages/dialplate"
                 "pages/liveMap"
                 "pages/bledevices"
                 "pages/speedsensor"
                 "pages/heartrate"
                 "pages/compass"
                 "pages/rgbcontrol"
                 "pages"
                 "utils/MapConv"
                 "utils/MapConv/TileSystem"
                 "utils/MapConv/GPS_Transform"
                 "utils/TileConv"
                 "utils/lv_poly_line"
                 "utils/TrackFilter"
                 "utils/PointContainer"
    REQUIRES dataproc hal_layer lvgl esp_timer freertos bsp_sd bsp_ble
)

# 设置C++标准
target_compile_features(${COMPONENT_LIB} PRIVATE cxx_std_11)

# 忽略LVGL枚举类型位运算的弃用警告（LVGL API使用枚举类型位运算，这是正常的）
target_compile_options(${COMPONENT_LIB} PRIVATE -Wno-deprecated-enum-enum-conversion)